1028_registration/accounts.css
@import url(https://fonts.googleapis.com/css?family=Open+Sans:200,300,400,700);

html {
	font-family: Open sans, Arial, sans-serif;
	font-size: 1em; 
}
body {
	margin: 0;
}
a {
  background-color: transparent;
}
a:active,
a:hover {
  outline: 0;
}
h1 {
  font-size: 2em;
  font-weight: 300;
  margin: 0.67em 0;
}
h2 {
	font-weight: 400;
}
img {
  border: 0;
}
svg:not(:root) {
  overflow: hidden;
}
button,
input,
 {
  color: inherit; /* 1 */
  font: inherit; /* 2 */
  margin: 0; /* 3 */
}
input::-moz-focus-inner {
	border: 0;
	padding: 0;
}
input {
	font-family: inherit;
	font-size: 1em;
	line-height: 1.2em;
	-webkit-appearance: none;
	border-radius: 0;
	padding-left: .8em;
}
input[type="checkbox"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}
/*End Normalize.css*/
.noscript {

}
.header {
	background-color: #00a6dd;
	padding: 2em;
}
.page-container {
	position: relative;
	box-sizing: border-box;
}
.productInfo {
	width: 40%;
	height: 37em;
	float: left;
	background-color: #eee;
}
.content {
	display: block;
	width: 32em;
	float: left;
	margin-left: 2em;
}
label {
	color: #999;
	display: block;
	text-transform: uppercase;
	margin-bottom: .2em;
}
ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
}
li{
	display: inline-block;
}
/*Li just for formatting CSS*/
li:not(#uprCase) {
	display: none;
}
/*END*/
#psswrd {
	position: relative;
}
#psswrdTest {
	position: absolute;
	top: -1.2em;
	right: 0;
	text-align: center;
}
ul {
	position: relative;
	color: #ff803c;
	background-color: #ffe6d1;
	border: 1px solid #ff803c;
	border-radius: 3px;
	padding: .6em;	
}
ul::after {
	position: absolute;
	left: 50%;
	bottom: -.7em;
	width: 0;
	height: 0;
	content: "";
	border-left: .8em solid transparent;
	border-right: .8em solid transparent;
	border-top: .8em solid #ffe6d1;
	margin-left: -.8em;
}
ul:before {
	position: absolute;
	left: 50%;
	bottom: -.76em;
	width: 0;
	height: 0;
	content: "";
	border-left: .8em solid transparent;
	border-right: .8em solid transparent;
	border-top: .8em solid #ff803c;
	margin-left: -.8em;
}
.required {
	color: #e44f09;
	font-weight: 700;
}
input:not(#submitSignUp) {
	width: 100%;
	height: 2.5em;
	border: 1px solid #ccc;
	border-radius: 3px;
	margin-bottom: 1.5em;
	box-sizing: border-box;
}
#submitSignUp {
	display: inline-block;
	background-color: #00a6dd;
	color: #fff;
	border: 0;
	border-radius: 3px;
	text-transform: uppercase;
	font-size: 1em;
	padding: .7em 2.1em;
	margin-top: 1em;
}
#terms {
	font-size: 1em;
}
@media screen and (max-width: 768px) {
	.productInfo {
		display: none;
	}
	.content {
		width: auto;
		float: none;
		margin: 0 1.2em;
	}
}

